add some missing vars

--- a/env-builder/main.yaml
+++ b/env-builder/main.yaml
@@ -105,6 +105,9 @@
         sd_output_dir: "{{ output_dir }}"
         sd_cluster_name: "{{ cluster_name }}"
         sd_env: "{{ env }}"
+        _tenant: "{{ tenant }}"
+        _env: "{{ env }}"
+        _cloud: "{{ current_env.cloud }}"
 
     - name: Gen namespaces
       ansible.builtin.include_role:
