add filter for formatting into better looking yaml

--- a/env-builder/roles/generate_cloud/tasks/main.yaml
+++ b/env-builder/roles/generate_cloud/tasks/main.yaml
@@ -25,7 +25,7 @@
 - name: Generate override Cloud yaml for {{ _cloud }}
   ansible.builtin.blockinfile:
     path: "{{ _current_env_dir }}/cloud.yml_override"
-    block: "{{ template_override }}"
+    block: "{{ template_override | to_nice_yaml }}"
     create: yes
   when: 
     - template_override != ''
