--- a/env-builder/roles/generate_cloud/tasks/main.yaml
+++ b/env-builder/roles/generate_cloud/tasks/main.yaml
@@ -23,6 +23,7 @@
     block: "{{ _template.template_override | to_nice_yaml }}"
     create: yes
   when: 
-    - is _template.template_override and template_override != ''
+    - _template.template_override is defined 
+    - _template.template_override != ''
     - not is_old_format
 
