Feature/template cloud override (#80)
* feat: implement cloud template override

* fix: wrong variable used

* add some missing vars

* add beautification to template override handling

* fix constants

* add filter for formatting into better looking yaml

* fix

* fix

--- a/env-builder/roles/generate_cloud/tasks/main.yaml
+++ b/env-builder/roles/generate_cloud/tasks/main.yaml
@@ -1,6 +1,29 @@
 ---
+- name: Tell the cloud attribute format
+  set_fact:
+    is_old_format: "{{ _template | type_debug != 'dict' }}"
+
 - name: Generate Cloud yaml for cloud {{ _cloud }}
   ansible.builtin.blockinfile:
     path: "{{ current_env_dir }}/cloud.yml"
     block: "{{ lookup('template', _template) }}"
     create: yes
+  when: is_old_format
+
+- name: Generate Cloud yaml for cloud {{ _cloud }} using cloud.template_path value
+  ansible.builtin.blockinfile:
+    path: "{{ current_env_dir }}/cloud.yml"
+    block: "{{ lookup('template', _template.template_path) }}"
+    create: yes
+  when: not is_old_format
+
+- name: Generate override Cloud yaml for {{ _cloud }}
+  ansible.builtin.blockinfile:
+    path: "{{ _current_env_dir }}/cloud.yml_override"
+    block: "{{ _template.template_override | to_nice_yaml }}"
+    create: yes
+  when: 
+    - _template.template_override is defined 
+    - _template.template_override != ''
+    - not is_old_format
+
