--- a/env-builder/main.yaml
+++ b/env-builder/main.yaml
@@ -165,9 +165,9 @@
         loop_var: paramset_file
       when: paramset_templates.files | length > 0
 
-    ###############################################################################
-    # Validate Required Variables
-    ###############################################################################
+###############################################################################
+# Validate Required Variables
+###############################################################################
 
     - name: Validate required variables
       ansible.builtin.assert:
@@ -178,11 +178,10 @@
           - current_env_dir is defined
         fail_msg: "Missing one or more required variables: templates_dir, env_instances_dir, cluster_name, current_env_dir. Please check your configuration."
 
-    ###############################################################################
-    # Discover and Render AppDef / RegDef Templates
-    ###############################################################################
+###############################################################################
+# Discover and Render AppDef / RegDef Templates
+###############################################################################
 
-    # --- Find AppDef templates
     - name: Find AppDef templates
       ansible.builtin.find:
         paths: "{{ templates_dir }}/appdefs"
@@ -196,7 +195,6 @@
       register: appdef_templates
       ignore_errors: true
 
-    # --- Find RegDef templates
     - name: Find RegDef templates
       ansible.builtin.find:
         paths: "{{ templates_dir }}/regdefs"
@@ -210,14 +208,16 @@
       register: regdef_templates
       ignore_errors: true
 
-    # --- Debug found templates
     - name: Debug - Found AppDef and RegDef templates
       ansible.builtin.debug:
         msg:
           - "AppDefs Found: {{ appdef_templates.files | default([]) | length }}"
           - "RegDefs Found: {{ regdef_templates.files | default([]) | length }}"
 
-    # --- Render AppDef / RegDef Templates if any found
+###############################################################################
+# Conditionally Render Templates if Present
+###############################################################################
+
     - name: Render AppDef / RegDef templates
       ansible.builtin.include_role:
         name: generate_appregdefs
@@ -231,3 +231,4 @@
       when: >
         (appdef_templates.files is defined and appdef_templates.files | length > 0) or
         (regdef_templates.files is defined and regdef_templates.files | length > 0)
+
